--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Home Page</title>
-    <link rel="stylesheet" href="/CSS/google.css">
+    <link rel="stylesheet" href="CSS/google.css">
 </head>
 <body>
     <div class="main">
