remove bug from index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main">
-        <img src="/images/bg.png" alt="logo" class="google">
+        <img src="images/bg.png" alt="logo" class="google">
         <div class="search">
             <input type="text" name="" placeholder="Search Google or type URL">
         </div>
